--- a/src/app/surah-list/surah-list.component.scss
+++ b/src/app/surah-list/surah-list.component.scss
@@ -2,8 +2,8 @@
 
 .right-side {
     background-color: $primaryColor;
-    position: absolute;
-    right: 0;
+    position: fixed;
+    left: 0;
     top: 0;
     width: 18%;
     height: 100%;
